tests/render/snapshots/render__migrated_v1_trace__brew_list_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                         command │ brew list
                          parser │ gnu  flags permute
  74: (rule "brew"               │
        (cond                    │
         ((positional "install") │ "list" = "install" → no
          …)                     │
         ((positional            │
           (or "list" "search")) │ "list" = "list" → yes
          (allow))))             │ → :allow

Result

  brew list

  → :allow

  config: <config-path>
