tests/render/snapshots/render__migrated_v1_trace__cargo_build_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                                 command │ cargo build
                                  parser │ gnu  flags permute
  95: (rule "cargo"                      │
        (if (exact)                      │
            …                            │
          (positional (? "affected")     │ "build" = "affected" → no
                      (? (or "watch"     │ "build" = "watch" → no
                             "run" "r")) │ "build" = "run" → no
                      (? "--")           │ "build" = "--" → no
                      (cond              │
                       ((or "install"    │
                            "uninstall") │
                        (deny))          │
                       ((or "build"      │
                            "b"          │
                            …            │
                            "clippy")    │
                        (allow)))        │ → :allow
                      (allow))))         │

Result

  cargo build

  → :allow

  config: <config-path>
