tests/render/snapshots/render__migrated_v1_trace__cargo_flags_only_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

            command │ cargo --list
             parser │ gnu  flags permute
  95: (rule "cargo" │
        (if (exact) │
            (allow) │ → :allow
          …))       │

Result

  cargo --list

  → :allow

  config: <config-path>
