tests/render/snapshots/render__migrated_v1_trace__cargo_run_test_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                                 command │ cargo run -- test
                                  parser │ gnu  flags permute
  95: (rule "cargo"                      │
        (if (exact)                      │
            …                            │
          (positional (? "affected")     │ "run" = "affected" → no
                      (? (or "watch"     │ "run" = "watch" → no
                             "run" "r")) │ "run" = "run" → yes
                      (? "--")           │ "--" = "--" → yes
                      (cond              │
                       ((or "install"    │
                            "uninstall") │
                        (deny))          │
                       ((or "build"      │
                            "b"          │
                            …            │
                            "clippy")    │
                        (allow)))        │ → :allow
                      (allow))))         │

Result

  cargo run -- test

  → :allow

  config: <config-path>
